--- a/test.ipynb
+++ b/test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN44enk8YEeDhoKlazt1B12",
+      "authorship_tag": "ABX9TyMCeN8RISQmYN31LYq9q1Vq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +22,46 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/hihihi4021/class2021Spring/blob/main/test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U67cSSJDZesL",
+        "outputId": "353a6556-f0c4-4264-9bcc-aa3f14093190",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = 1\r\n",
+        "b = 1\r\n",
+        "c = a + b\r\n",
+        "c"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nUlS_TVCZtjH"
+      },
+      "source": [
+        "우리는 python을 배우게 됩니다"
       ]
     }
   ]
