Colaboratory를 통해 생성됨

--- a/syntax.ipynb
+++ b/syntax.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMIpT5vyAKLXG9HaCew/0jD",
+      "authorship_tag": "ABX9TyO9wNNnVTnKk3ZRYlwHM7q8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
         "for i in a:\r\n",
         "  print (i)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -66,7 +66,7 @@
         "for i in range(len(a)):\r\n",
         "  print(a[i])"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,35 @@
         "for i in a:\r\n",
         "  print(i)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "red\n",
+            "green\n",
+            "blue\n",
+            "purple\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hVb_Pjd6z8KB",
+        "outputId": "11456091-52b3-405c-de68-b5f30b946d44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = ['red', 'green', 'blue', 'purple']\r\n",
+        "for i in range(len(a)):\r\n",
+        "    print(a[i])"
+      ],
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +151,7 @@
         "for i, a_ in enumerate(a):\r\n",
         "  print(\"{}: {}%\".format(a_, b[i]*100))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +180,7 @@
         "for a_, b_ in zip(a,b):\r\n",
         " print(\"{}: {}%\".format(a_, b_*100))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +210,7 @@
         "else:\r\n",
         "  print (a+1)\r\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,7 +235,7 @@
         "    for j in range(3, 5):\r\n",
         "        print(i*j)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +264,7 @@
         "        if j >=4:\r\n",
         "            print(i*j)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +290,7 @@
         "b = [i for i in a if i >=2]\r\n",
         "b"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -292,7 +320,7 @@
         "b = [i for i in a if len(i) >=4]\r\n",
         "b"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
