--- a/string.ipynb
+++ b/string.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "string.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPx6a8eRcplGemUhv/auX6P",
+      "authorship_tag": "ABX9TyPG+Yql3DniEw1ciAPZwRkX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,18 +31,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ExpU4FTa9eee",
-        "outputId": "815d371e-7282-4447-d7b6-7c3ec8f0f537"
+        "outputId": "9d7deecf-1b9f-4e7c-c3fb-0d3332d9c2e7"
       },
       "source": [
         "s = 'abcdef'\r\n",
+        "print(type(s))\r\n",
         "print(s[0], s[5], s[-1], s[-6])\r\n",
         "print(s[1:3], s[1:], s[:3], s[:])"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "<class 'str'>\n",
             "a f f a\n",
             "bc bcdef abc abcdef\n"
           ],
