Colaboratory를 통해 생성됨

--- a/string.ipynb
+++ b/string.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "string.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPG+Yql3DniEw1ciAPZwRkX",
+      "authorship_tag": "ABX9TyNr0RvR2Rvl07URsJkCfGov",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,13 +25,489 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "feu0rrjClJ26"
+      },
+      "source": [
+        "<복습>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Dhq8zZdwlM7t"
+      },
+      "source": [
+        "string의 정의는 s = 어떤 것 -  ex) s = 'abcdef'<br>\r\n",
+        "s[1:2]는 인덱스 1에서 인덱스 3 전까지를 말함<br>\r\n",
+        "s[-x]의 경우 끝에서 부터 -1,-2,-3...이렇게 됨. \r\n",
+        "     "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "iKMKwUm6ACiX",
-        "outputId": "84ffc35f-4e5f-43da-ac96-dc6d4ae24f53",
+        "id": "_t1q3pENm9Pp",
+        "outputId": "8fb99b13-99f7-4ba7-fa1b-04f907d46202",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "source": [
+        "s = 'twinkle twinkle little star'\r\n",
+        "print (type(s))\r\n",
+        "print (s[-4],s[3],s[-2],s[2],s[13])\r\n",
+        "print(s[:7],s[7:16])\r\n",
+        "print(s[:])"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'str'>\n",
+            "s n a i l\n",
+            "twinkle  twinkle \n",
+            "twinkle twinkle little star\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U2wAe9t-o2D0",
+        "outputId": "12b0af91-491a-4467-e8c7-9746ec6bac05",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "s = '1,2,3, childhood'\r\n",
+        "print(type(s))\r\n",
+        "print(s[6])\r\n",
+        "print(s[-6])"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'str'>\n",
+            " \n",
+            "l\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MCNh60pxlixt"
+      },
+      "source": [
+        "len(s)=스트링 길이, s.upper()=대문자로 바뀌어 나옴, s.lower()=소문자로 바뀌어 나옴, "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o04e1-tOpdde",
+        "outputId": "d92ec025-1b99-4f43-c6c1-ead12591b842",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "s = 'What is going on'\r\n",
+        "len(s)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "16"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nC4NLh5lqpsS",
+        "outputId": "5ab8b697-e72c-43dc-fc01-2340e7a0e118",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "s[3]+s[1]+s[2]+s[3]+s[:4]*5"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'thatWhatWhatWhatWhatWhat'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QtEa4qeSq8KA",
+        "outputId": "955feb5b-ae08-4a6c-c775-952f8493773b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "s.upper()"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'WHAT IS GOING ON'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7jtxGNMCsPvF"
+      },
+      "source": [
+        "s = s. upper () 이면 원래 스트링이 애초에 대문자로 바뀜"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1Azt4DLerGgn"
+      },
+      "source": [
+        "s = s. upper () "
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vfw9LgrxrJrP",
+        "outputId": "28dd966e-2ed7-41c6-e455-9cc46bb7fc05",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "s"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'WHAT IS GOING ON'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9z5hf3XjrLoB",
+        "outputId": "14e295b4-3169-41c5-a04d-c9e4543e3dc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "s. lower()"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'what is going on'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QHZ_l4-DrXyb"
+      },
+      "source": [
+        "s.find(x)는 s에서x를 찾아 인덱스를 말하라.<br>\r\n",
+        "s.rindex(x)는 x를 거꾸로 인덱스를 센 것<br>\r\n",
+        "s.strip(x)는 공백이나 지저분한 것을 제거시켜 깨끗한 문장만 남기게 함. <br>\r\n",
+        "s.split('x')는 x를 찾아서 스플릿 시킴.\r\n",
+        "s = '  '. join(tokens)는 토큰 속 단어들을 공백으로 하나로 합침 (스플릿과 정반대)\r\n",
+        "s.replace (‘x’, ‘y’)-> x를 y로 바꿔라"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vW2TmpH4sJjE",
+        "outputId": "bb1bf11a-2450-4bce-b0b7-7d5672ca3684",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "s = 'baby all I want for Christmas is you.\\n' \t\r\n",
+        "result = s.find('Christmas') \t # index of first instance of string t inside s (-1 if not found)\r\n",
+        "result"
+      ],
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Xu7RIeUHtxRY",
+        "outputId": "112550ef-808a-40cb-d45f-5de32c9b8dff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "result = s.rindex('all')        # like s.find(t) except it raises ValueError if not found\r\n",
+        "result"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WwxJRg6jvVcu",
+        "outputId": "ca0ef6b2-2226-46c7-bb17-b7fd53a22b82",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "s = s.strip()      \t            # a copy of s without leading or trailing whitespace\r\n",
+        "s"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'baby all I want for Christmas is you'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KfabO7fJvagx",
+        "outputId": "58565fd4-3229-479f-b8c0-17bfcd63919a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "tokens = s.split(' ')\t        # split s into a list wherever a t is found (whitespace by default)\r\n",
+        "tokens"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['baby', 'all', 'I', 'want', 'for', 'Christmas', 'is', 'you']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CAVPB8Y0vd2M",
+        "outputId": "24a53feb-3b52-4ae0-c002-a1ea6bd047d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "s = ' '.join(tokens)\t        # combine the words of the text into a string using s as the glue\r\n",
+        "s"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'baby all I want for Christmas is you'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_1oWNQfav6gX",
+        "outputId": "48d509c8-8122-420f-dd44-1190158a9c51",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "source": [
+        "s = s.replace('you', 'money')   # replace instances of t with u inside s\r\n",
+        "s"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'baby all I want for Christmas is money'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0ynSoubXlGCP"
+      },
+      "source": [
+        "<기본 학습>\r\n",
+        "\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iKMKwUm6ACiX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "84ffc35f-4e5f-43da-ac96-dc6d4ae24f53"
       },
       "source": [
         "s = 'abcdef'\r\n",
@@ -39,7 +515,7 @@
         "print(s[0], s[5], s[-1], s[-6])\r\n",
         "print(s[1:3], s[1:], s[:3], s[:])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,13 +654,13 @@
           "height": 36
         },
         "id": "weecpBRt90kb",
-        "outputId": "13b6126e-1fef-4ae5-9ecb-e6b33533ce58"
+        "outputId": "3106f1e5-8fb8-41ba-bd6f-5dc443e273a3"
       },
       "source": [
         "s = ' this is a house built this year.\\n' \t\r\n",
         "s"
       ],
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +675,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 50
         }
       ]
     },
@@ -210,13 +686,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EJjAs9m_92P-",
-        "outputId": "a2c22ac5-1b6c-4441-8f59-0a82e799eaa9"
+        "outputId": "600045fc-237d-4946-effc-6d2ba62c1b7c"
       },
       "source": [
         "result = s.find('house') \t    # index of first instance of string t inside s (-1 if not found)\r\n",
         "result"
       ],
-      "execution_count": null,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,7 +704,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 51
         }
       ]
     },
@@ -239,13 +715,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VWIxFVtN94Lu",
-        "outputId": "4047117f-dae4-4607-868d-6c28af780e3b"
+        "outputId": "819a5550-906c-44d0-f439-becd710e7a8b"
       },
       "source": [
         "result = s.find('this')\t    # index of last instance of string t inside s (-1 if not found)\r\n",
         "result"
       ],
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -257,7 +733,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 52
         }
       ]
     },
@@ -268,13 +744,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cootL34g95--",
-        "outputId": "a770d0a0-d39f-4f65-bc53-4108e8772ae7"
+        "outputId": "a088f10a-bf51-438a-85ff-0650b37806bc"
       },
       "source": [
         "result = s.rindex('this')        # like s.find(t) except it raises ValueError if not found\r\n",
         "result"
       ],
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -286,7 +762,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 53
         }
       ]
     },
