Colaboratory를 통해 생성됨

--- a/string.ipynb
+++ b/string.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "string.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNr0RvR2Rvl07URsJkCfGov",
+      "authorship_tag": "ABX9TyPWRog7mZWXHtTHZJAz1mZ4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,11 +48,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_t1q3pENm9Pp",
-        "outputId": "8fb99b13-99f7-4ba7-fa1b-04f907d46202",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_t1q3pENm9Pp",
+        "outputId": "8fb99b13-99f7-4ba7-fa1b-04f907d46202"
       },
       "source": [
         "s = 'twinkle twinkle little star'\r\n",
@@ -78,11 +78,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "U2wAe9t-o2D0",
-        "outputId": "12b0af91-491a-4467-e8c7-9746ec6bac05",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U2wAe9t-o2D0",
+        "outputId": "12b0af91-491a-4467-e8c7-9746ec6bac05"
       },
       "source": [
         "s = '1,2,3, childhood'\r\n",
@@ -115,11 +115,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "o04e1-tOpdde",
-        "outputId": "d92ec025-1b99-4f43-c6c1-ead12591b842",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "o04e1-tOpdde",
+        "outputId": "d92ec025-1b99-4f43-c6c1-ead12591b842"
       },
       "source": [
         "s = 'What is going on'\r\n",
@@ -144,12 +144,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nC4NLh5lqpsS",
-        "outputId": "5ab8b697-e72c-43dc-fc01-2340e7a0e118",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "nC4NLh5lqpsS",
+        "outputId": "5ab8b697-e72c-43dc-fc01-2340e7a0e118"
       },
       "source": [
         "s[3]+s[1]+s[2]+s[3]+s[:4]*5"
@@ -176,12 +176,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QtEa4qeSq8KA",
-        "outputId": "955feb5b-ae08-4a6c-c775-952f8493773b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "QtEa4qeSq8KA",
+        "outputId": "955feb5b-ae08-4a6c-c775-952f8493773b"
       },
       "source": [
         "s.upper()"
@@ -228,12 +228,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vfw9LgrxrJrP",
-        "outputId": "28dd966e-2ed7-41c6-e455-9cc46bb7fc05",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "vfw9LgrxrJrP",
+        "outputId": "28dd966e-2ed7-41c6-e455-9cc46bb7fc05"
       },
       "source": [
         "s"
@@ -260,12 +260,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9z5hf3XjrLoB",
-        "outputId": "14e295b4-3169-41c5-a04d-c9e4543e3dc2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "9z5hf3XjrLoB",
+        "outputId": "14e295b4-3169-41c5-a04d-c9e4543e3dc2"
       },
       "source": [
         "s. lower()"
@@ -298,19 +298,19 @@
         "s.find(x)는 s에서x를 찾아 인덱스를 말하라.<br>\r\n",
         "s.rindex(x)는 x를 거꾸로 인덱스를 센 것<br>\r\n",
         "s.strip(x)는 공백이나 지저분한 것을 제거시켜 깨끗한 문장만 남기게 함. <br>\r\n",
-        "s.split('x')는 x를 찾아서 스플릿 시킴.\r\n",
-        "s = '  '. join(tokens)는 토큰 속 단어들을 공백으로 하나로 합침 (스플릿과 정반대)\r\n",
+        "s.split('x')는 x를 찾아서 스플릿 시킴.<br>\r\n",
+        "s = '  '. join(tokens)는 토큰 속 단어들을 공백으로 하나로 합침 (스플릿과 정반대)<br>\r\n",
         "s.replace (‘x’, ‘y’)-> x를 y로 바꿔라"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vW2TmpH4sJjE",
-        "outputId": "bb1bf11a-2450-4bce-b0b7-7d5672ca3684",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vW2TmpH4sJjE",
+        "outputId": "bb1bf11a-2450-4bce-b0b7-7d5672ca3684"
       },
       "source": [
         "s = 'baby all I want for Christmas is you.\\n' \t\r\n",
@@ -336,11 +336,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Xu7RIeUHtxRY",
-        "outputId": "112550ef-808a-40cb-d45f-5de32c9b8dff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Xu7RIeUHtxRY",
+        "outputId": "112550ef-808a-40cb-d45f-5de32c9b8dff"
       },
       "source": [
         "result = s.rindex('all')        # like s.find(t) except it raises ValueError if not found\r\n",
@@ -365,12 +365,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WwxJRg6jvVcu",
-        "outputId": "ca0ef6b2-2226-46c7-bb17-b7fd53a22b82",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "WwxJRg6jvVcu",
+        "outputId": "ca0ef6b2-2226-46c7-bb17-b7fd53a22b82"
       },
       "source": [
         "s = s.strip()      \t            # a copy of s without leading or trailing whitespace\r\n",
@@ -398,11 +398,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KfabO7fJvagx",
-        "outputId": "58565fd4-3229-479f-b8c0-17bfcd63919a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KfabO7fJvagx",
+        "outputId": "58565fd4-3229-479f-b8c0-17bfcd63919a"
       },
       "source": [
         "tokens = s.split(' ')\t        # split s into a list wherever a t is found (whitespace by default)\r\n",
@@ -427,12 +427,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CAVPB8Y0vd2M",
-        "outputId": "24a53feb-3b52-4ae0-c002-a1ea6bd047d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "CAVPB8Y0vd2M",
+        "outputId": "24a53feb-3b52-4ae0-c002-a1ea6bd047d8"
       },
       "source": [
         "s = ' '.join(tokens)\t        # combine the words of the text into a string using s as the glue\r\n",
@@ -460,12 +460,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_1oWNQfav6gX",
-        "outputId": "48d509c8-8122-420f-dd44-1190158a9c51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "_1oWNQfav6gX",
+        "outputId": "48d509c8-8122-420f-dd44-1190158a9c51"
       },
       "source": [
         "s = s.replace('you', 'money')   # replace instances of t with u inside s\r\n",
