Colaboratory를 통해 생성됨

--- a/syntax.ipynb
+++ b/syntax.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO9wNNnVTnKk3ZRYlwHM7q8",
+      "authorship_tag": "ABX9TyP2R28Mdp4qNHTYkXjSAb47",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,6 +22,91 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/hihihi4021/class2021Spring/blob/main/syntax.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aHwq3Whyx03v"
+      },
+      "source": [
+        "<복습>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WBRSZF2kyKIR"
+      },
+      "source": [
+        " for문을 적을 때에는 for___ in___ 이후 무조건 한칸 띄워야함 (탭)<bn>\r\n",
+        " \r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3aymE4mOyjaG",
+        "outputId": "2ecfc173-fab6-46d3-dce7-e30ad0465d57",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = ['I','love','YOU',3000]\r\n",
+        "for i in a:\r\n",
+        "  print (i)"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "I\n",
+            "love\n",
+            "YOU\n",
+            "3000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZfeA9k1cy1hU",
+        "outputId": "365f1690-13c4-4f4e-a806-5408b35491ee",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a = ['I','love','YOU',3000, 'Ironman']\r\n",
+        "for i in range(len(a)):\r\n",
+        "  print (a[i])"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "I\n",
+            "love\n",
+            "YOU\n",
+            "3000\n",
+            "Ironman\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3PEv81KQxyl_"
+      },
+      "source": [
+        "<기본 학습>"
       ]
     },
     {
@@ -112,17 +197,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "hVb_Pjd6z8KB",
-        "outputId": "11456091-52b3-405c-de68-b5f30b946d44",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "11456091-52b3-405c-de68-b5f30b946d44"
       },
       "source": [
         "a = ['red', 'green', 'blue', 'purple']\r\n",
         "for i in range(len(a)):\r\n",
         "    print(a[i])"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
